--- a/index.html
+++ b/index.html
@@ -1,9 +1,302 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎨 RAL + NCS Color Comparator</title>
-    <style>
-        /* [ALL CSS FROM PREVIOUS - MINIFIED VERSION] */
-        *{box-sizing:border-box}body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;margin:0;padding:1rem;min-height:100vh;background:linear-gradient(-45deg,#ff9a9e,#fecfef
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🎨 RAL + NCS Color Comparator</title>
+  <style>
+    *{box-sizing:border-box}
+    body{
+      font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
+      margin:0;padding:1rem;min-height:100vh;
+      background:linear-gradient(-45deg,#ff9a9e,#fecfef,#fad0c4,#a8edea);
+      background-size:400% 400%;animation:gradientShift 15s ease infinite;
+      display:flex;align-items:center;justify-content:center;
+    }
+    @keyframes gradientShift{0%,100%{background-position:0% 50%}50%{background-position:100% 50%}}
+    .container{
+      background:rgba(255,255,255,.95);backdrop-filter:blur(20px);
+      border-radius:24px;padding:2.5rem;
+      box-shadow:0 25px 50px rgba(0,0,0,.15);
+      max-width:550px;width:100%;text-align:center;
+      border:1px solid rgba(255,255,255,.3)
+    }
+    .page{display:none}.page.active{display:block}
+    h1{
+      font-size:2.2rem;
+      background:linear-gradient(45deg,#ff6b6b,#4ecdc4,#45b7d1,#f9ca24);
+      background-size:400% 400%;
+      -webkit-background-clip:text;-webkit-text-fill-color:transparent;
+      background-clip:text;animation:rainbow 3s ease infinite;
+      margin:0 0 1.5rem;font-weight:700;
+    }
+    @keyframes rainbow{0%,100%{background-position:0% 50%}50%{background-position:100% 50%}}
+    .subtitle{color:#666;font-size:1.05rem;margin-bottom:2rem}
+    .form-group{margin-bottom:2rem}
+    label{
+      display:block;font-weight:600;color:#333;
+      margin-bottom:.8rem;font-size:1.05rem;
+    }
+    select,input[type=text]{
+      width:100%;max-width:280px;height:55px;
+      padding:0 1.5rem;font-size:1.2rem;font-weight:600;
+      border:3px solid #e1e5e9;border-radius:14px;outline:none;
+      text-align:center;letter-spacing:2px;
+      transition:all .3s cubic-bezier(.4,0,.2,1);
+      background:rgba(255,255,255,.8);
+      box-shadow:0 8px 25px rgba(0,0,0,.1);
+    }
+    select:focus,input[type=text]:focus{
+      border-color:#4a90e2;
+      box-shadow:0 0 0 4px rgba(74,144,226,.15);
+      transform:translateY(-2px);
+    }
+    .input-pair{
+      display:grid;grid-template-columns:1fr 1fr;
+      gap:1.5rem;margin-top:1rem;
+    }
+    .run-btn{
+      background:linear-gradient(45deg,#4CAF50,#45a049);
+      color:#fff;border:none;width:200px;height:70px;
+      border-radius:20px;font-size:1.6rem;font-weight:800;
+      cursor:pointer;position:relative;overflow:hidden;
+      box-shadow:0 10px 30px rgba(76,175,80,.4);
+      transition:all .3s cubic-bezier(.4,0,.2,1);
+      margin:2rem auto 0;
+    }
+    .run-btn:hover{
+      transform:translateY(-3px);
+      box-shadow:0 15px 40px rgba(76,175,80,.5);
+    }
+    .run-btn:active{
+      transform:translateY(-1px) scale(.98);
+      animation:clickPulse .2s ease;
+    }
+    @keyframes clickPulse{
+      0%{box-shadow:0 10px 30px rgba(76,175,80,.4)}
+      50%{box-shadow:0 0 20px rgba(76,175,80,.8)}
+      100%{box-shadow:0 10px 30px rgba(76,175,80,.4)}
+    }
+    .result-container{
+      display:flex;justify-content:space-between;
+      gap:2rem;margin:2rem 0;
+    }
+    .color-half{
+      flex:1;height:200px;border-radius:20px;
+      position:relative;box-shadow:0 15px 35px rgba(0,0,0,.2);
+      overflow:hidden;
+    }
+    .color-half.left{border-top-right-radius:0;border-bottom-right-radius:0}
+    .color-half.right{border-top-left-radius:0;border-bottom-left-radius:0}
+    .color-info{
+      position:absolute;bottom:0;left:0;right:0;
+      background:rgba(0,0,0,.78);color:#fff;
+      padding:1.2rem;text-align:center;
+    }
+    .color-code{font-size:1.3rem;font-weight:700;letter-spacing:2px;margin-bottom:.3rem}
+    .color-name{font-size:.95rem;opacity:.95;margin-bottom:.4rem}
+    .color-rgb{
+      font-family:'Courier New',monospace;font-size:.9rem;
+      background:rgba(255,255,255,.2);
+      padding:.35rem .8rem;border-radius:8px;display:inline-block;
+    }
+    .back-btn{
+      background:linear-gradient(45deg,#667eea,#764ba2);
+      color:#fff;border:none;padding:1rem 2rem;
+      border-radius:12px;font-size:1.05rem;font-weight:600;
+      cursor:pointer;box-shadow:0 8px 25px rgba(102,126,234,.3);
+      transition:all .3s ease;
+    }
+    .back-btn:hover{
+      transform:translateY(-2px);
+      box-shadow:0 12px 30px rgba(102,126,234,.4);
+    }
+    .error{
+      color:#e74c3c;background:rgba(250,219,216,.9);
+      border:2px solid #f5b7b1;padding:1rem 1.2rem;
+      border-radius:14px;margin:1rem 0;
+      font-size:.95rem;font-weight:600;
+    }
+    @media(max-width:480px){
+      .input-pair{grid-template-columns:1fr;gap:1rem}
+      .result-container{flex-direction:column;gap:1rem}
+      .color-half{height:150px}
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- INPUT PAGE -->
+    <div id="inputPage" class="page active">
+      <h1>🎨 Color Comparator</h1>
+      <p class="subtitle">Compare RAL & NCS colors side by side</p>
+
+      <div class="form-group">
+        <label for="colorSystem">Colour system</label>
+        <select id="colorSystem">
+          <option value="RAL">RAL Classic (e.g. 9005)</option>
+          <option value="NCS">NCS (e.g. S0502-Y)</option>
+        </select>
+      </div>
+
+      <div class="input-pair">
+        <div>
+          <label for="color1">Select Colour 1</label>
+          <input type="text" id="color1" placeholder="Code 1" />
+        </div>
+        <div>
+          <label for="color2">Select Colour 2</label>
+          <input type="text" id="color2" placeholder="Code 2" />
+        </div>
+      </div>
+
+      <div id="errorBox" class="error" style="display:none;"></div>
+
+      <button class="run-btn" id="runBtn">🚀 RUN</button>
+    </div>
+
+    <!-- RESULT PAGE -->
+    <div id="resultPage" class="page">
+      <h1>🎨 Color Comparison</h1>
+      <div id="resultContainer"></div>
+      <button class="back-btn" id="backBtn">← Back to input</button>
+    </div>
+  </div>
+
+  <!-- Tiny click sound -->
+  <audio id="clickSound">
+    <source src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" type="audio/ogg">
+  </audio>
+
+  <script>
+    let ralDB = {};
+    let ncsDB = {};
+    let dataLoaded = false;
+
+    const inputPage = document.getElementById('inputPage');
+    const resultPage = document.getElementById('resultPage');
+    const runBtn = document.getElementById('runBtn');
+    const backBtn = document.getElementById('backBtn');
+    const errorBox = document.getElementById('errorBox');
+    const resultContainer = document.getElementById('resultContainer');
+    const colorSystemSelect = document.getElementById('colorSystem');
+    const clickSound = document.getElementById('clickSound');
+
+    // Load full database from colors.json
+    fetch('colors.json')
+      .then(res => res.json())
+      .then(data => {
+        ralDB = data.ral || {};
+        ncsDB = data.ncs || {};
+        dataLoaded = true;
+        console.log('Colors loaded:', Object.keys(ralDB).length, 'RAL,', Object.keys(ncsDB).length, 'NCS');
+      })
+      .catch(err => {
+        console.error('Error loading colors.json', err);
+        showError('Unable to load colors database (colors.json). Please check the file path.');
+      });
+
+    function showError(msg) {
+      errorBox.textContent = msg;
+      errorBox.style.display = 'block';
+    }
+
+    function clearError() {
+      errorBox.style.display = 'none';
+      errorBox.textContent = '';
+    }
+
+    function normaliseRAL(code) {
+      return code.replace(/[^0-9]/g, '').padStart(4,'0');
+    }
+
+    function normaliseNCS(code) {
+      return code.trim().toUpperCase().replace(/\s+/g,'');
+    }
+
+    function lookupColor(system, rawCode) {
+      if (system === 'RAL') {
+        const code = normaliseRAL(rawCode);
+        const data = ralDB[code];
+        if (!data) return null;
+        return { system:'RAL', code: code, name: data.name, rgb: data.rgb };
+      } else {
+        const code = normaliseNCS(rawCode);
+        const data = ncsDB[code];
+        if (!data) return null;
+        return { system:'NCS', code: code, name: data.name || code, rgb: data.rgb };
+      }
+    }
+
+    function rgbString(arr) {
+      return `rgb(${arr[0]}, ${arr[1]}, ${arr[2]})`;
+    }
+
+    function showResult(c1, c2) {
+      const html = `
+        <div class="result-container">
+          <div class="color-half left" style="background:${rgbString(c1.rgb)};">
+            <div class="color-info">
+              <div class="color-code">${c1.system} ${c1.code}</div>
+              <div class="color-name">${c1.name}</div>
+              <div class="color-rgb">${rgbString(c1.rgb)}</div>
+            </div>
+          </div>
+          <div class="color-half right" style="background:${rgbString(c2.rgb)};">
+            <div class="color-info">
+              <div class="color-code">${c2.system} ${c2.code}</div>
+              <div class="color-name">${c2.name}</div>
+              <div class="color-rgb">${rgbString(c2.rgb)}</div>
+            </div>
+          </div>
+        </div>
+      `;
+      resultContainer.innerHTML = html;
+      inputPage.classList.remove('active');
+      resultPage.classList.add('active');
+    }
+
+    runBtn.addEventListener('click', () => {
+      clearError();
+      if (clickSound) { clickSound.currentTime = 0; clickSound.play().catch(()=>{}); }
+
+      if (!dataLoaded) {
+        showError('Colour data is still loading. Please wait a moment and try again.');
+        return;
+      }
+
+      const system = colorSystemSelect.value;
+      const raw1 = document.getElementById('color1').value;
+      const raw2 = document.getElementById('color2').value;
+
+      if (!raw1 || !raw2) {
+        showError('Please enter both Colour 1 and Colour 2 codes.');
+        return;
+      }
+
+      const c1 = lookupColor(system, raw1);
+      const c2 = lookupColor(system, raw2);
+
+      if (!c1 && !c2) {
+        showError(`${system} ${raw1} and ${system} ${raw2} not found in database.`);
+        return;
+      }
+      if (!c1) {
+        showError(`${system} ${raw1} not found in database.`);
+        return;
+      }
+      if (!c2) {
+        showError(`${system} ${raw2} not found in database.`);
+        return;
+      }
+
+      showResult(c1, c2);
+    });
+
+    backBtn.addEventListener('click', () => {
+      resultPage.classList.remove('active');
+      inputPage.classList.add('active');
+    });
+  </script>
+</body>
+</html>
